tests/cases/should_fail/types/malformed_function_type.hash
str_eq: (str, str) > str;
