tests/cases/should_fail/types/malformed_function_type.stderr
error: unexpectedly encountered a `>`
 --> $DIR/malformed_function_type.hash:1:20
1 |   str_eq: (str, str) > str;
  |                      ^ here
  = help: consider adding a `;`
